# Ghattas_AUV

./: Operator guid  README.md  install.bash
bash_scripts/: install.bash  launch.bash  zed_launch.bash
ghattas_autonomy_behaviors/: README.md
ghattas_autonomy_behaviors/ghattas_autonomy_flexbe_behaviors/: CMakeLists.txt  package.xml  setup.py
ghattas_autonomy_behaviors/ghattas_autonomy_flexbe_states/: CMakeLists.txt  package.xml  setup.py
ghattas_confiuration/: CMakeLists.txt  package.xml
ghattas_confiuration/cfg/: control_reconfigure.cfg
ghattas_confiuration/scripts/: control_server.py
ghattas_control/: CMakeLists.txt  package.xml
ghattas_control/cfg/: control_reconfigure.cfg
ghattas_control/config/: parameters.yaml
ghattas_control/launch/: control.launch  control_reconfigure.launch
ghattas_control/msg/: vehicle_state.msg
ghattas_control/scripts/: Joystick.py  OPTIMIZATION_NOTES.txt  Vehicle Movements  align_tools.py  control_maintainer.py  (+29 more)
ghattas_control_advanced/: CMakeLists.txt  package.xml
ghattas_launcher/: CMakeLists.txt  package.xml
ghattas_launcher/launch/: ghattas.launch
ghattas_localization/: CMakeLists.txt  package.xml
ghattas_navigation/: CMakeLists.txt  package.xml
ghattas_simulation/: read me
ghattas_standalone_test/: CMakeLists.txt  package.xml
ghattas_tf/: CMakeLists.txt  package.xml
ghattas_vision/: CMakeLists.txt  install.bash  package.xml
ghattas_vision/cfg/: vision_dynamic_re.cfg
ghattas_vision/launch/: ghattas_vision.launch  visual_odom.launch
ghattas_vision/msg/: vision_target.msg  vision_task_detection.msg
ghattas_vision/params/: parameters.yaml
ghattas_vision/scripts/: Localized processing.py  color_mask.py  cycle.py  dice.py  mask_info.py  param.py  param_server.py  path_detection.py  perspective_solve.py  pnp.py  screen_grab.py  task_class.py  vision_node.py
ghattas_vision/scripts/_classes/: task_class.py
ghattas_vision/scripts/_param/: processing_param.py  task_param.py  zed_calibration.py
ghattas_vision/scripts/_processing/: color_mask.py  mask_info.py  roi.py
ghattas_vision/scripts/_utils/: draw_shapes.py  manual_select.py
ghattas_vision/scripts/legacy/: select_aoi.py
ghattas_vision/src/: vision_node.py  webcam_node.py
ghattas_vision/src/_classes/: task_class.py  zed_camera.py
ghattas_vision/src/_processing/: color_mask.py  coord_shift.py  custom_math_func.py  get_position.py  mask_info.py  path_detection.py  perspective_solve.py  roi.py  template_matcher.py
ghattas_vision/src/_utils/: FPS.py  screen_grab.py
ghattas_vision/src/legacy/: cycle.py  index.py  mode_selector.py  old_tracking.py  old_vision_node.py  uncalibrated_zed_ros_streem.py
ghattas_zed_driver/: CMakeLists.txt  package.xml
mavros_launcher/: CMakeLists.txt  package.xml
(+78 files in other folders)
