<?xml version="1.0"?>
<package format="2">
  <name>ghattas_vision</name>
  <version>0.1.1</version>
  <description>The ghattas vison package</description>

  <maintainer email="todo@todo.todo">Ahmad Aljabali</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
